@@ -11,6 +11,7 @@ SubVersion: $Id$
 	- [roms]  $2224: reverted back OLE changes in oleaut_i.c: break MSVC compilation
 	- [roms]  $2225: fixed signed/unsigned warnings with MSVC
 	- [kevin] $2231: fixed get_folder_list_handle failing
+	- [kevin] $2232: fixed canceling KDE file dialog causing an "invalid file" error
 
 - 07/07/2006, version 2.81b
 	- [kevin] $2128: HW4 has 8 MB of FlashROM
